--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <button>Bejelentkezés</button>
       <button>Regisztráció</button>
       <button>Tippek megtekintése</button>
+      <button onclick="myFunction()">Gomb</button>
     </div>
   </div>
   <h1 style="text-align:center; padding-top: 150px;">BlntzPicks Main Page</h1>
